Enhance GUI: rounded corners, multi-select, drag-and-drop, performance improvements

--- a/folia-phantom/pom.xml
+++ b/folia-phantom/pom.xml
@@ -16,6 +16,7 @@
         <module>folia-phantom-core</module>
         <module>folia-phantom-cli</module>
         <module>folia-phantom-plugin</module>
+        <module>folia-phantom-gui</module>
     </modules>
 
     <properties>
